--- a/modules/config/templates/replicated.conf.tmpl
+++ b/modules/config/templates/replicated.conf.tmpl
@@ -1,10 +1,9 @@
-${jsonencode({
-    "DaemonAuthenticationType":     "password",
-    "DaemonAuthenticationPassword": "${replicated_console_password}",
+{
+        "DaemonAuthenticationType":     "password",
+        "DaemonAuthenticationPassword": "${replicated_console_password}",
 %{ if airgap == true ~}
     "LicenseBootstrapAirgapPackagePath": "/var/lib/tfe/tfe.airgap",
 %{ endif ~}
-
     "TlsBootstrapType":             "${tls_boostrap_type}",
 %{ if tls_boostrap_type == "server-path" ~}
     "TlsBootstrapHostname":         "${hostname}",
@@ -14,7 +13,7 @@ ${jsonencode({
     "TlsBootstrapKey":              "${tls_boostrap_key}",
 %{ endif ~}
 %{ if release_sequence != "latest" ~}
-    "ReleaseSequence":                   ${release_sequence},
+    "ReleaseSequence":                   "${release_sequence}",
 %{ endif ~}
 %{ if channel_id != "default" ~}
     "LicenseBootstrapChannelID":         "${channel_id}",
@@ -22,4 +21,4 @@ ${jsonencode({
     "ImportSettingsFrom":           "/etc/tfe-settings.json",
     "LicenseFileLocation":          "/etc/tfe-license.rli"
     "BypassPreflightChecks":        true,
-})}
+}
