--- a/modules/config/templates/tfe-settings.json.tmpl
+++ b/modules/config/templates/tfe-settings.json.tmpl
@@ -39,7 +39,7 @@
         "value": "${gcs_project}"
     },
     "enable_active_active" : {
-        "value": "0"
+        "value": "${active_active_flag}"
     },
     "redis_host" : {
         "value": "${redis_host}"
